@@ -1,3 +1,8 @@
+2008-08-18  Roland Mas  <lolando@debian.org>
+
+	* cronjobs/db_trove_maint.php: Enable showing private projects in
+	Trove map (patch #1264 by Vittal Aithal).
+
 2008-07-20  Roland Mas  <lolando@debian.org>
 
 	* common/reporting/report_utils.php: Search user by the initial
